<resources>
    <string name="app_name">Babal</string>

    <string name="menu_textView_titreJeu">BABAL</string>
    <string name="menu_button_lancerJeu">Play</string>
    <string name="menu_button_regles">Rules</string>
    <string name="menu_button_scores">Scores</string>
    <string name="menu_button_quitterJeu">Quit</string>
    <string name="menu_button_music">Music Toggle</string>
    <string name="menu_textView_copyright">Copyright : Aymeric Pinel, Clément Guichard, Romain Goyheneix</string>

    <string name="game_textView_scoreActuel">Score</string>
    <string name="game_textView_valeurClic">Clic value</string>
    <string name="game_textView_cptRebonds">Bounces available</string>

    <string name="scores_button_rejouer">Play again</string>
    <string name="scores_button_publier">Publish</string>
    <string name="scores_button_menu">Main menu</string>
    <string name="scores_textView_scoreEffectue">Your score : </string>
    <string name="scores_table_titreScoresLocaux">Local</string>
    <string name="scores_table_titreScoresGlobaux">Global</string>
    <string name="scores_textView_votreNom">Your name (maximum 16 characters) :</string>
    <string name="scores_plainText_votreNom">State your name</string>
    <string name="scores_toast_pasInternetPasPublication">Unable to connect to the Internet. You cannot send your score.</string>
    <string name="scores_toast_pasInternetPasChargement">Unable to connect to the Internet. You cannot load the global leaderboard.</string>
    <string name="scores_toast_scoreDejaPublie">You already have published this score.</string>
    <string name="scores_toast_nomVide">You must fill your name before publishing your score.</string>

    <string name="rules_textView_titre">Game rules</string>
    <string name="rules_textView_regle1">1 : The ball must not touch the edge of the screen.</string>
    <string name="rules_textView_regle2">2 : Each time you touch the screen, you earn points.</string>
    <string name="rules_textView_regle3">3 : The speed of the ball increases as time.</string>
    <string name="rules_textView_regle4">4 : The faster the ball is, the more points you earn.</string>
    <string name="rules_textView_regle5">5 : You can reset the ball speed by shaking your phone.</string>
    <string name="rules_textView_regle6">6 : Each time you reset the speed of the ball, it will accelerate faster.</string>
    <string name="rules_textView_regle7">7 : Light makes the ball disappear. Cover the light sensor to make it reappear.</string>
    <string name="rules_textView_regle8">8 : Touch bonuses to collect jokers that make the ball. </string>
    <string name="rules_textView_regle9">9 : Do the best score you can!</string>
    <string name="rules_button_retour">Back</string>
</resources>