<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/score_textView_scoreRealise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/score_recyclerView_affichageScores"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_tabLayout_scoresTabLayout"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/score_tabLayout_scoresTabLayout"
        android:layout_width="277dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_textView_scoreRealise">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/score_tabItem_localTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scores_table_titreScoresLocaux" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/score_tabItem_globalTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scores_table_titreScoresGlobaux" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/score_plainText_yourName"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/scores_plainText_votreNom"
            android:ems="10"
            android:hint="@string/scores_plainText_votreNom"
            android:inputType="textPersonName"
            android:labelFor="@id/score_button_publier"
            android:maxLength="16"
            app:layout_constraintBottom_toTopOf="@+id/score_button_publier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/score_textView_yourName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/scores_textView_votreNom"
            app:layout_constraintBottom_toTopOf="@+id/score_plainText_yourName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/score_button_menu"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:text="@string/scores_button_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/score_button_rejouer"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:text="@string/scores_button_rejouer"
            app:layout_constraintBottom_toTopOf="@+id/score_button_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/score_button_publier"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:text="@string/scores_button_publier"
            app:layout_constraintBottom_toTopOf="@+id/score_button_rejouer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>